examples/datalog/12_errors/04_arity_mismatch_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_arity_err
Knowledge graph 'test_arity_err' created.
Switched to knowledge graph: test_arity_err
> .kg use test_arity_err
Switched to knowledge graph: test_arity_err
> +mixed[(1, 2), (3, 4)].
Inserted 2 fact(s) into 'mixed'.
> ?- mixed(X, Y).
2 rows:
  (1, 2)
  (3, 4)
> +mixed[(5, 6, 7)].
Script error: Insert failed: Arity mismatch for relation 'mixed': existing arity is 2, but trying to insert tuples with arity 3
