examples/datalog/12_errors/04_arity_mismatch_error.dl
% Test: Arity Mismatch
% Category: 12_errors
% Description: Tests error when inserting tuples with different arities into same relation

.kg create test_arity_err
.kg use test_arity_err

% First insert binary tuples
+mixed[(1, 2), (3, 4)].
?- mixed(X, Y).

% Now try to insert ternary tuple into same relation - should error
+mixed[(5, 6, 7)].

% Query to see what happened
?- mixed(X, Y).

% Cleanup
.kg use default
.kg drop test_arity_err
